[gd_scene load_steps=3 format=2]

[ext_resource path="res://Experiments/AutoMinimizer.gd" type="Script" id=1]
[ext_resource path="res://Experiments/BlueScreen.tscn" type="PackedScene" id=2]

[node name="AutoMinimizer" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 1025.0
margin_bottom = 600.0
text = "STOP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="LabelTick" type="Timer" parent="."]
one_shot = true

[node name="DebugLabel" type="Label" parent="."]
visible = false
margin_right = 221.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueScreen" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
